--- a/src/pages/login/Hero/LoginBar.scss
+++ b/src/pages/login/Hero/LoginBar.scss
@@ -8,6 +8,15 @@
 
 }
 
+.push {
+    &:hover{
+        opacity: 0.8;
+        cursor: pointer;
+    }
+    &:active{
+        box-shadow: inset 10px 30px 20px #3761f7;
+    }
+}
 .loginBar .select{
     border: none;
     width: 157.5px;
@@ -31,13 +40,6 @@
     &:nth-child(2){
         background: #5278FF;
         color: #ffffff;
-        &:active{
-            box-shadow: inset 10px 30px 20px #3761f7;
-        }
-    }
-
-    &:hover{
-        opacity: 0.8;
     }
 
 }
