--- a/src/pages/login/Hero/Hero.scss
+++ b/src/pages/login/Hero/Hero.scss
@@ -3,7 +3,7 @@
     top: 68px;
     left: 24px;
 }
-.entire{
+.hero.entire{
     width: 100%;
     height: 100vh;
     display: flex;
@@ -25,3 +25,5 @@
     flex: 1;
     background-color: white;
 }
+
+
