--- a/src/pages/login/Login/LoginForm.scss
+++ b/src/pages/login/Login/LoginForm.scss
@@ -1,22 +1,4 @@
-//forms 
-
-@mixin forms{
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-    width: 100%;
-}
-//input & submit
-
-@mixin inputOrSubmit{
-    box-sizing: border-box;
-    width: 100%;
-    height: 48px;
-    border-radius: 8px;
-    padding: 12px 8px 12px 12px;
-    font-style: normal;
-}
-
+@import "pages/common/common.scss";
 .login{
     .form{
         @include forms;
