--- a/src/pages/login/Hero/Hero.scss
+++ b/src/pages/login/Hero/Hero.scss
@@ -1,7 +1,18 @@
+@keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
 .logo{
     position: absolute;
     top: 68px;
     left: 24px;
+    z-index: 10;
+    
 }
 .hero.entire{
     width: 100%;
@@ -13,6 +24,7 @@
 }
 
 .flex-item:nth-child(1){
+    animation: fadein 3s;
     background-image: url(/images/hero/mainImage.svg);
     /* Center and scale the image nicely */
     background-position: center;
