--- a/src/pages/calander/Calander.scss
+++ b/src/pages/calander/Calander.scss
@@ -8,7 +8,7 @@
         display: flex;
         flex-direction: column;
         .new-button{
-            animation: fade-in 2s;
+            animation: fadein 2s;
             position: absolute;
             width: 44px;
             height: 44px;
